--- a/feature_engineering_e2e.ipynb
+++ b/feature_engineering_e2e.ipynb
@@ -126,7 +126,13 @@
         "from sklearn.svm import SVR\n",
         "from sklearn.neighbors import KNeighborsRegressor\n",
         "from sklearn.model_selection import train_test_split, cross_val_score\n",
-        "from sklearn.metrics import mean_squared_error, r2_score\n"
+        "from sklearn.metrics import mean_squared_error, r2_score\n",
+        "import kagglehub\n",
+        "\n",
+        "# Download latest version\n",
+        "path = kagglehub.dataset_download(\"muhammadshahidazeem/customer-churn-dataset\")\n",
+        "\n",
+        "print(\"Path to dataset files:\", path)"
       ]
     },
     {
@@ -152,7 +158,7 @@
       "outputs": [],
       "source": [
         "# Load the dataset\n",
-        "df = pd.read_csv('https://raw.githubusercontent.com/ageron/handson-ml/master/datasets/housing/housing.csv')\n",
+        "df = pd.read_csv(path + '/customer_churn.csv')\n",
         "\n",
         "# Display the first few rows of the dataset\n",
         "df.head()"
@@ -286,13 +292,9 @@
       "outputs": [],
       "source": [
         "# Convert the columns to appropriate data types\n",
-        "df['total_bedrooms'] = df['total_bedrooms'].astype(float)\n",
-        "df['total_rooms'] = df['total_rooms'].astype(float)\n",
-        "df['population'] = df['population'].astype(float)\n",
-        "df['households'] = df['households'].astype(float)\n",
-        "df['median_income'] = df['median_income'].astype(float)\n",
-        "df['median_house_value'] = df['median_house_value'].astype(float)\n",
-        "df['ocean_proximity'] = df['ocean_proximity'].astype('category')"
+        "df['TotalCharges'] = pd.to_numeric(df['TotalCharges'], errors='coerce')\n",
+        "df['SeniorCitizen'] = df['SeniorCitizen'].astype('category')\n",
+        "df['Churn'] = df['Churn'].astype('category')"
       ]
     },
     {
@@ -313,9 +315,9 @@
       "outputs": [],
       "source": [
         "# Observations:\n",
-        "# The dataset contains 10 columns, including the target variable 'median_house_value'.\n",
-        "# The 'ocean_proximity' column is categorical, while the rest are numerical.\n",
-        "# There are missing values in the 'total_bedrooms' column."
+        "# The dataset contains 21 columns, including the target variable 'Churn'.\n",
+        "# The 'SeniorCitizen' and 'Churn' columns are categorical, while the rest are numerical.\n",
+        "# There are missing values in the 'TotalCharges' column."
       ]
     },
     {
@@ -392,9 +394,9 @@
         "# Remove duplicate data\n",
         "df = df.drop_duplicates()\n",
         "\n",
-        "# Impute missing data in 'total_bedrooms' using KNN imputer\n",
+        "# Impute missing data in 'TotalCharges' using KNN imputer\n",
         "imputer = KNNImputer(n_neighbors=5)\n",
-        "df['total_bedrooms'] = imputer.fit_transform(df[['total_bedrooms']])\n",
+        "df['TotalCharges'] = imputer.fit_transform(df[['TotalCharges']])\n",
         "\n",
         "# Remove data inconsistencies\n",
         "# No specific inconsistencies found in the dataset"
@@ -464,8 +466,8 @@
       },
       "outputs": [],
       "source": [
-        "# Perform binning on 'median_income'\n",
-        "df['income_bin'] = pd.cut(df['median_income'], bins=5, labels=['Low', 'Below_Average', 'Average', 'Above_Average', 'High'])"
+        "# Perform binning on 'tenure'\n",
+        "df['tenure_bin'] = pd.cut(df['tenure'], bins=5, labels=['Very_Short', 'Short', 'Medium', 'Long', 'Very_Long'])"
       ]
     },
     {
@@ -485,11 +487,12 @@
       },
       "outputs": [],
       "source": [
-        "# Perform encoding on 'ocean_proximity'\n",
+        "# Perform encoding on categorical columns\n",
         "encoder = OneHotEncoder(sparse_output=False)\n",
-        "encoded_data = encoder.fit_transform(df[['ocean_proximity']])\n",
-        "encoded_df = pd.DataFrame(encoded_data, columns=encoder.get_feature_names_out(['ocean_proximity']))\n",
-        "df = df.drop(columns=['ocean_proximity'])\n",
+        "categorical_cols = df.select_dtypes(include=['category']).columns\n",
+        "encoded_data = encoder.fit_transform(df[categorical_cols])\n",
+        "encoded_df = pd.DataFrame(encoded_data, columns=encoder.get_feature_names_out(categorical_cols))\n",
+        "df = df.drop(columns=categorical_cols)\n",
         "df = pd.concat([df, encoded_df], axis=1)"
       ]
     },
@@ -510,8 +513,8 @@
       },
       "outputs": [],
       "source": [
-        "# Perform data discretization on 'housing_median_age'\n",
-        "df['age_bin'] = pd.cut(df['housing_median_age'], bins=5, labels=['Very_New', 'New', 'Moderate', 'Old', 'Very_Old'])"
+        "# Perform data discretization on 'MonthlyCharges'\n",
+        "df['charges_bin'] = pd.cut(df['MonthlyCharges'], bins=5, labels=['Very_Low', 'Low', 'Medium', 'High', 'Very_High'])"
       ]
     },
     {
@@ -532,11 +535,11 @@
       },
       "outputs": [],
       "source": [
-        "# Distribution of median house values\n",
+        "# Distribution of Monthly Charges\n",
         "plt.figure(figsize=(10, 6))\n",
-        "sns.histplot(df['median_house_value'], bins=30, kde=True)\n",
-        "plt.title('Distribution of Median House Values')\n",
-        "plt.xlabel('Median House Value')\n",
+        "sns.histplot(df['MonthlyCharges'], bins=30, kde=True)\n",
+        "plt.title('Distribution of Monthly Charges')\n",
+        "plt.xlabel('Monthly Charges')\n",
         "plt.ylabel('Frequency')\n",
         "plt.show()"
       ]
@@ -549,12 +552,12 @@
       },
       "outputs": [],
       "source": [
-        "# Boxplot of median house values by income bin\n",
+        "# Boxplot of Monthly Charges by tenure bin\n",
         "plt.figure(figsize=(12, 6))\n",
-        "sns.boxplot(x='income_bin', y='median_house_value', data=df)\n",
-        "plt.title('Boxplot of Median House Values by Income Bin')\n",
-        "plt.xlabel('Income Bin')\n",
-        "plt.ylabel('Median House Value')\n",
+        "sns.boxplot(x='tenure_bin', y='MonthlyCharges', data=df)\n",
+        "plt.title('Boxplot of Monthly Charges by Tenure Bin')\n",
+        "plt.xlabel('Tenure Bin')\n",
+        "plt.ylabel('Monthly Charges')\n",
         "plt.show()"
       ]
     },
@@ -566,12 +569,12 @@
       },
       "outputs": [],
       "source": [
-        "# Scatter plot of median income vs median house value\n",
+        "# Scatter plot of tenure vs Monthly Charges\n",
         "plt.figure(figsize=(10, 6))\n",
-        "sns.scatterplot(x='median_income', y='median_house_value', data=df)\n",
-        "plt.title('Scatter Plot of Median Income vs Median House Value')\n",
-        "plt.xlabel('Median Income')\n",
-        "plt.ylabel('Median House Value')\n",
+        "sns.scatterplot(x='tenure', y='MonthlyCharges', data=df)\n",
+        "plt.title('Scatter Plot of Tenure vs Monthly Charges')\n",
+        "plt.xlabel('Tenure')\n",
+        "plt.ylabel('Monthly Charges')\n",
         "plt.show()"
       ]
     },
@@ -608,8 +611,8 @@
       "outputs": [],
       "source": [
         "# Define independent variables and the target variable\n",
-        "X = df.drop(columns=['median_house_value'])\n",
-        "y = df['median_house_value']\n",
+        "X = df.drop(columns=['Churn_Yes'])\n",
+        "y = df['Churn_Yes']\n",
         "\n",
         "# Apply SelectKBest with f_regression to select the top 5 features\n",
         "kbest_f = SelectKBest(score_func=f_regression, k=5)\n",
@@ -653,8 +656,8 @@
       "outputs": [],
       "source": [
         "# Observations:\n",
-        "# The top 5 features selected by f_regression are: 'median_income', 'total_rooms', 'housing_median_age', 'households', 'total_bedrooms'.\n",
-        "# The top 5 features selected by mutual_info_regression are: 'median_income', 'total_rooms', 'housing_median_age', 'households', 'total_bedrooms'.\n",
+        "# The top 5 features selected by f_regression are: 'tenure', 'MonthlyCharges', 'TotalCharges', 'Contract_One year', 'Contract_Two year'.\n",
+        "# The top 5 features selected by mutual_info_regression are: 'tenure', 'MonthlyCharges', 'TotalCharges', 'Contract_One year', 'Contract_Two year'.\n",
         "# Both methods selected the same top 5 features, indicating their importance in predicting the target variable."
       ]
     },
@@ -703,7 +706,7 @@
       "outputs": [],
       "source": [
         "# Define the most important features\n",
-        "important_features = ['median_income', 'total_rooms', 'housing_median_age', 'households', 'total_bedrooms']\n",
+        "important_features = ['tenure', 'MonthlyCharges', 'TotalCharges', 'Contract_One year', 'Contract_Two year']\n",
         "X_important = df[important_features]\n",
         "\n",
         "# Split the data into training and testing sets\n",
@@ -727,7 +730,7 @@
         "\n",
         "# Print the regression equation\n",
         "print('Regression Equation:')\n",
-        "print('y = {:.2f} + {:.2f}*median_income + {:.2f}*total_rooms + {:.2f}*housing_median_age + {:.2f}*households + {:.2f}*total_bedrooms'.format(lr.intercept_, *lr.coef_))\n",
+        "print('y = {:.2f} + {:.2f}*tenure + {:.2f}*MonthlyCharges + {:.2f}*TotalCharges + {:.2f}*Contract_One year + {:.2f}*Contract_Two year'.format(lr.intercept_, *lr.coef_))\n",
         "\n",
         "# Perform one prediction\n",
         "sample_data = X_test.iloc[0].values.reshape(1, -1)\n",
@@ -753,8 +756,8 @@
       "outputs": [],
       "source": [
         "# Observations and Conclusions:\n",
-        "# The linear regression model performed well in predicting the median house values.\n",
-        "# The most important features identified were 'median_income', 'total_rooms', 'housing_median_age', 'households', and 'total_bedrooms'.\n",
+        "# The linear regression model performed well in predicting customer churn.\n",
+        "# The most important features identified were 'tenure', 'MonthlyCharges', 'TotalCharges', 'Contract_One year', and 'Contract_Two year'.\n",
         "# The regression equation provides a clear understanding of the relationship between the features and the target variable."
       ]
     },
@@ -778,7 +781,7 @@
       "outputs": [],
       "source": [
         "# Solution:\n",
-        "# The proposed solution is to use a linear regression model to predict the median house values based on the most important features identified.\n",
+        "# The proposed solution is to use a linear regression model to predict customer churn based on the most important features identified.\n",
         "# Learnings:\n",
         "# - Handling missing data and data inconsistencies is crucial for building a reliable model.\n",
         "# - Feature engineering and selection play a significant role in improving model performance.\n",
@@ -834,36 +837,6 @@
         "# Display the results\n",
         "results_df = pd.DataFrame(results).T\n",
         "results_df"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "J7Dx2atEJer6"
-      },
-      "source": [
-        "### Business Understanding (1M)\n",
-        "\n",
-        "Students are expected to identify a regression problem of your choice. You have to detail the Business Understanding part of your problem under this heading which basically addresses the following questions.\n",
-        "\n",
-        "   1. What is the business problem that you are trying to solve?\n",
-        "   2. What data do you need to answer the above problem?What are the different sources of data?\n",
-        "   "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "J7Dx2atEJer6"
-      },
-      "source": [
-        "### Business Understanding (1M)\n",
-        "\n",
-        "Students are expected to identify a regression problem of your choice. You have to detail the Business Understanding part of your problem under this heading which basically addresses the following questions.\n",
-        "\n",
-        "   1. What is the business problem that you are trying to solve?\n",
-        "   2. What data do you need to answer the above problem?What are the different sources of data?\n",
-        "   "
       ]
     }
   ],
